@@ -200,6 +200,20 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|AlreadyClosedException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|CompoundFileDirectory
 import|;
 end_import
@@ -740,11 +754,47 @@ name|void
 name|incRef
 parameter_list|()
 block|{
+name|int
+name|count
+decl_stmt|;
+while|while
+condition|(
+operator|(
+name|count
+operator|=
 name|ref
 operator|.
-name|incrementAndGet
+name|get
 argument_list|()
-expr_stmt|;
+operator|)
+operator|>
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+name|ref
+operator|.
+name|compareAndSet
+argument_list|(
+name|count
+argument_list|,
+name|count
+operator|+
+literal|1
+argument_list|)
+condition|)
+block|{
+return|return;
+block|}
+block|}
+throw|throw
+operator|new
+name|AlreadyClosedException
+argument_list|(
+literal|"SegmentCoreReaders is already closed"
+argument_list|)
+throw|;
 block|}
 DECL|method|getNormValues
 name|NumericDocValues
